tests/error/not_global_inside_global_class.gw
#! [contains] non-global type in a global class

class State{}

class global States extends State[16] {
    var State current;
}
